--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
       // Single Page App redirect for GitHub Pages
       // Redirects 404s to index.html with the path stored in sessionStorage
       const path = window.location.pathname;
-      const repo = '/weatherstation_spa';
+      const repo = '/weatherstation';
       if (path.startsWith(repo)) {
         sessionStorage.setItem('redirect', path.slice(repo.length) || '/');
         window.location.replace(repo + '/');
